solved part 1 of homework

--- a/homework_solution.py.ipynb
+++ b/homework_solution.py.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "f28a21bc",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "3b9ae43e",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "11edc836",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "8c61d9be",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "2e6f9b28",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "bd863a8a",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "6d710657",
    "metadata": {
     "scrolled": true
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "id": "f3537676",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "id": "60ae5720",
    "metadata": {},
    "outputs": [],
@@ -175,8 +175,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "cce709b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['measurement', 'station']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Base.classes.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "a4b98fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sqlalchemy.ext.automap.measurement"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assign the measurement class to a variable called `Measurement`\n",
+    "Measurement = Base.classes.measurement\n",
+    "Measurement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1fffe09e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1af66e11730>,\n",
+       " 'tobs': 65.0,\n",
+       " 'id': 1,\n",
+       " 'date': '2010-01-01',\n",
+       " 'prcp': 0.08,\n",
+       " 'station': 'USC00519397'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Query table and get first row\n",
+    "first_row = session.query(Measurement).first()\n",
+    "\n",
+    "# Print row as a dictionary\n",
+    "first_row.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "fb34e56c",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "Measure_data = session.query(Measurement.date, Measurement.prcp).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "75b78d15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19550"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.query(Measurement.date).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "193e621d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign the station class to a variable called `Station`\n",
+    "Station = Base.classes.station"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9e4a2579",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1af636c7b50>,\n",
+       " 'station': 'USC00519397',\n",
+       " 'latitude': 21.2716,\n",
+       " 'elevation': 3.0,\n",
+       " 'name': 'WAIKIKI 717.2, HI US',\n",
+       " 'id': 1,\n",
+       " 'longitude': -157.8168}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Query table and get first row\n",
+    "first_row = session.query(Station).first()\n",
+    "\n",
+    "# Print row as a dictionary\n",
+    "first_row.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6fc95a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "951e755d",
    "metadata": {},
    "outputs": [],
    "source": []
